Revision history for perl distribution LinkEmbedder

1.13 Not Released
 - Fix parsing imgur links #17
 - Fix parsing metacpan.org links
 - Fix parsing pastebini.com links
 - Fix parsing xkcd.com links
 - Add support for extracting "application/ld+json" information
 - Add support for paste.centos.org (replaced fedoraproject paste)
 - Changed to use twitframe.com to embed twitter posts

1.12 2020-03-24T12:12:10+0900
 - Add support for reading X-Provider-Name from headers
 - Will serve plain text as a paste

1.11 2020-01-07T09:24:53+0900
 - Add support for fortunecowsay.com

1.10 2019-12-23T13:23:49+0900
 - Fix Can't locate object method "clone" via package ...

1.09 2019-12-23T11:20:51+0900
 - Fix loading google images by setting "User-Agent" header #13
 - Removed default placeholder_url

1.08 2019-11-12T16:04:56+0900
 - Fix "Can't call method "host" on an undefined"

1.07 2019-10-30T09:12:36+0900
 - Add support for force_secure
 - Replaced most of the insecure "http:" links #11
 - Changed appear.in to whereby.com #11

1.06 2019-10-16T18:55:09+0900
 - Add support for NHL videos #12
 - Fixed a bunch of failing tests #12
 - Make sure error() is always a hash-ref

1.05 2019-04-17T18:33:02+0700
 - No longer EXPERIMENTAL
 - Replaced a bunch of outdated example links

1.04 2019-04-03T16:21:20+0700
 - Fix https://app.thorsen.pm/linkembedder demo links #10

1.03 2018-12-25T11:18:02+0900
 - Add support for X-Request-Base to example app
 - Fix serve() would render multiple responses for "json"

1.02 2018-12-14T12:32:49+0900
 - Add get() again

1.01 2018-09-26T13:44:46+0900
 - Forgot to remove Carp::Always
 - Add support for https://perlbot.pl #1
 - Add support for https://paste.fedoraproject.org #2
 - Add support for https://bitbucket.org #3

1.00 2018-09-26T01:22:18+0900
 - Compatible with Mojolicious 8.00
 - Converted from delay to promises

0.05 2017-05-01T22:35:47+0200
 - Fix terrible class names from provider_name()