@@ -21,28 +21,29 @@ has ua => sub { Mojo::UserAgent->new->max_redirects(3); };
 
 has url_to_link => sub {
   return {
-    'default'                 => 'LinkEmbedder::Link::Basic',
-    'dropbox.com'             => 'LinkEmbedder::Link::Dropbox',
-    'git.io'                  => 'LinkEmbedder::Link::Github',
-    'github.com'              => 'LinkEmbedder::Link::Github',
-    'google'                  => 'LinkEmbedder::Link::Google',
-    'goo.gl'                  => 'LinkEmbedder::Link::Google',
-    'imgur.com'               => 'LinkEmbedder::Link::Imgur',
-    'ix.io'                   => 'LinkEmbedder::Link::Ix',
-    'instagram.com'           => 'LinkEmbedder::Link::oEmbed',
-    'metacpan.org'            => 'LinkEmbedder::Link::Metacpan',
-    'nhl.com'                 => 'LinkEmbedder::Link::NHL',
-    'paste.opensuse.org'      => 'LinkEmbedder::Link::OpenSUSE',
-    'paste.scsys.co.uk'       => 'LinkEmbedder::Link::Shadowcat',
-    'pastebin.com'            => 'LinkEmbedder::Link::Pastebin',
-    'spotify'                 => 'LinkEmbedder::Link::Spotify',
-    'ted.com'                 => 'LinkEmbedder::Link::oEmbed',
-    'travis-ci.org'           => 'LinkEmbedder::Link::Travis',
-    'twitter.com'             => 'LinkEmbedder::Link::Twitter',
-    'vimeo.com'               => 'LinkEmbedder::Link::oEmbed',
-    'xkcd.com'                => 'LinkEmbedder::Link::Xkcd',
-    'whereby.com'             => 'LinkEmbedder::Link::AppearIn',
-    'youtube.com'             => 'LinkEmbedder::Link::oEmbed',
+    'default'            => 'LinkEmbedder::Link::Basic',
+    'dropbox.com'        => 'LinkEmbedder::Link::Dropbox',
+    'facebook.com'       => 'LinkEmbedder::Link::Facebook',
+    'git.io'             => 'LinkEmbedder::Link::Github',
+    'github.com'         => 'LinkEmbedder::Link::Github',
+    'google'             => 'LinkEmbedder::Link::Google',
+    'goo.gl'             => 'LinkEmbedder::Link::Google',
+    'imgur.com'          => 'LinkEmbedder::Link::Imgur',
+    'ix.io'              => 'LinkEmbedder::Link::Ix',
+    'instagram.com'      => 'LinkEmbedder::Link::oEmbed',
+    'metacpan.org'       => 'LinkEmbedder::Link::Metacpan',
+    'nhl.com'            => 'LinkEmbedder::Link::NHL',
+    'paste.opensuse.org' => 'LinkEmbedder::Link::OpenSUSE',
+    'paste.scsys.co.uk'  => 'LinkEmbedder::Link::Shadowcat',
+    'pastebin.com'       => 'LinkEmbedder::Link::Pastebin',
+    'spotify'            => 'LinkEmbedder::Link::Spotify',
+    'ted.com'            => 'LinkEmbedder::Link::oEmbed',
+    'travis-ci.org'      => 'LinkEmbedder::Link::Travis',
+    'twitter.com'        => 'LinkEmbedder::Link::Twitter',
+    'vimeo.com'          => 'LinkEmbedder::Link::oEmbed',
+    'xkcd.com'           => 'LinkEmbedder::Link::Xkcd',
+    'whereby.com'        => 'LinkEmbedder::Link::AppearIn',
+    'youtube.com'        => 'LinkEmbedder::Link::oEmbed',
   };
 };
 
